fixed issues with edge on mobile

--- a/sample_react_apps/mortal_kombat_x_syn_tours_app/src/components/AppComponent/App.css
+++ b/sample_react_apps/mortal_kombat_x_syn_tours_app/src/components/AppComponent/App.css
@@ -8,3 +8,12 @@
   flex-direction: column;
   align-items: center;
 }
+
+.refreshButton {
+  font-size: 1rem;
+  background-color: rgb(33, 150, 245);
+  color: white;
+  padding: 0.5rem;
+  border-radius: 0.25rem;
+  margin: 0.5rem;
+}
